// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`report.error handles "Array of Errors" signature correctly 1`] = `
Object {
  "category": "UNKNOWN",
  "context": Object {
    "sourceMessage": "Message 3 from new Error",
  },
  "docsUrl": "https://gatsby.dev/issue-how-to",
  "error": [Error: Message 3 from new Error],
  "level": "ERROR",
  "stack": Any<Array>,
  "text": "Message 3 from new Error",
  "type": "UNKNOWN",
}
`;

exports[`report.error handles "Error" signature correctly 1`] = `
Object {
  "category": "UNKNOWN",
  "context": Object {
    "sourceMessage": "Message from new Error",
  },
  "docsUrl": "https://gatsby.dev/issue-how-to",
  "error": [Error: Message from new Error],
  "level": "ERROR",
  "stack": Any<Array>,
  "text": "Message from new Error",
  "type": "UNKNOWN",
}
`;

exports[`report.error handles "String" signature correctly 1`] = `
Object {
  "category": "UNKNOWN",
  "context": Object {
    "sourceMessage": "Error created in Jest",
  },
  "docsUrl": "https://gatsby.dev/issue-how-to",
  "level": "ERROR",
  "stack": Array [],
  "text": "Error created in Jest",
  "type": "UNKNOWN",
}
`;

exports[`report.error handles "String, Error" signature correctly 1`] = `
Object {
  "category": "UNKNOWN",
  "context": Object {
    "sourceMessage": "Error string passed to reporter Message from new Error",
  },
  "docsUrl": "https://gatsby.dev/issue-how-to",
  "error": [Error: Message from new Error],
  "level": "ERROR",
  "stack": Any<Array>,
  "text": "Error string passed to reporter Message from new Error",
  "type": "UNKNOWN",
}
`;

exports[`report.error handles "String, Error, pluginName" signature correctly 1`] = `
Object {
  "category": "UNKNOWN",
  "context": Object {
    "sourceMessage": "Error string passed to reporter Message from new Error",
  },
  "docsUrl": "https://gatsby.dev/issue-how-to",
  "error": [Error: Message from new Error],
  "level": "ERROR",
  "pluginName": "gatsby-plugin-foo-bar",
  "stack": Array [
    Object {
      "columnNumber": 7,
      "fileName": "<PROJECT_ROOT>/packages/gatsby-cli/src/reporter/__tests__/index.ts",
      "functionName": null,
      "lineNumber": 100,
    },
    Object {
      "columnNumber": 28,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-circus/build/utils.js",
      "functionName": "Promise.then.completed",
      "lineNumber": 293,
    },
    Object {
      "columnNumber": 10,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-circus/build/utils.js",
      "functionName": "callAsyncCircusFn",
      "lineNumber": 226,
    },
    Object {
      "columnNumber": 40,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-circus/build/run.js",
      "functionName": "_callCircusTest",
      "lineNumber": 297,
    },
    Object {
      "columnNumber": 3,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-circus/build/run.js",
      "functionName": "_runTest",
      "lineNumber": 233,
    },
    Object {
      "columnNumber": 9,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-circus/build/run.js",
      "functionName": "_runTestsForDescribeBlock",
      "lineNumber": 135,
    },
    Object {
      "columnNumber": 9,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-circus/build/run.js",
      "functionName": "_runTestsForDescribeBlock",
      "lineNumber": 130,
    },
    Object {
      "columnNumber": 3,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-circus/build/run.js",
      "functionName": "run",
      "lineNumber": 68,
    },
    Object {
      "columnNumber": 21,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js",
      "functionName": "runAndTransformResultsToJestFormat",
      "lineNumber": 122,
    },
    Object {
      "columnNumber": 19,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js",
      "functionName": "jestAdapter",
      "lineNumber": 79,
    },
    Object {
      "columnNumber": 16,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-runner/build/runTest.js",
      "functionName": "runTestInternal",
      "lineNumber": 367,
    },
    Object {
      "columnNumber": 34,
      "fileName": "<PROJECT_ROOT>/node_modules/jest-runner/build/runTest.js",
      "functionName": "runTest",
      "lineNumber": 444,
    },
  ],
  "text": "Error string passed to reporter Message from new Error",
  "type": "UNKNOWN",
}
`;

exports[`report.error handles "structuredError" signature correctly 1`] = `
Object {
  "category": "USER",
  "code": "95312",
  "context": Object {
    "undefinedGlobal": "navigator",
  },
  "docsUrl": "https://gatsby.dev/debug-html",
  "level": "ERROR",
  "stack": Array [],
  "text": "\\"navigator\\" is not available during server-side rendering. Enable \\"DEV_SSR\\" to debug this during \\"gatsby develop\\".",
  "type": "HTML.COMPILATION",
}
`;

exports[`report.error uses custom error from errorMap 1`] = `
Object {
  "code": "1337",
  "context": Object {
    "someProp": "test123",
  },
  "docsUrl": "https://www.gatsbyjs.com/docs/gatsby-cli/#new",
  "level": "ERROR",
  "stack": Array [],
  "text": "Error text is test123",
  "type": "PLUGIN",
}
`;

exports[`report.error uses custom error from errorMap with pluginName 1`] = `
Object {
  "code": "gatsby-plugin-foo-bar_1337",
  "context": Object {
    "someProp": "test123",
  },
  "docsUrl": "https://www.gatsbyjs.com/docs/gatsby-cli/#new",
  "level": "ERROR",
  "pluginName": "gatsby-plugin-foo-bar",
  "stack": Array [],
  "text": "Error text is test123",
  "type": "PLUGIN",
}
`;
